--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/icons8-notes-100.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Markdown Notes</title>
